--- a/src/Tshirt/Tshirt.css
+++ b/src/Tshirt/Tshirt.css
@@ -1,7 +1,7 @@
 
 
 .t-shirt{
-    border: 2px solid lightskyblue;
+    border: 2px solid rgba(135, 206, 250, 0.29);
     border-radius: 10px;
     padding: 10px;
 }
@@ -9,4 +9,10 @@
     height: 250px;
     border-radius: 15px;
     
+}
+
+.btn-buyNow{
+    background-color: burlywood;
+    border-radius: 10px;
+    box-shadow: 5px 3px grey;
 }
